deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
        # - path: /fts(/|$)(.*)
        #   pathType: ImplementationSpecific
        #   backend:
        #     service:
        #       name:  indonews-fts
        #       port:
        #         number: 5000
        - path: /nginx(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name:  nginx-project
              port:
                number: 80
        - path: /navigatorx(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name:  navigatorx
              port:
                number: 6000
